notifications drop down jumping fix, changed trigger element & removed caret element

--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -284,47 +284,60 @@
     }
     #notifications-wrapper {
       margin-top: 1em;
+      a {
+        color: $lightgrey;
+        border-top: none;
+        font-size: .75em;
+      }
       @media (max-width: 480px) {
-        padding: 0.65em 0 2em;
-        width: 22%;
+        padding: 0.65em 1em 2em 0;
+        width: 7.22%;
         margin: 0 auto;
         float: none;
       }
-      .open {
-        position: absolute;
-        ul {
-          @media (max-width: 480px) {
-            right: -140px;
-            top: 24px;
-          }
-        }
-      }
       .dropdown {
-        margin-top: 1em;
-        button, .btn {
+        a {
           background: none;
           border: none;
           text-shadow: none;
           @include box-shadow (none);
-          p a {
-            color: $lightgrey;
-            border-top: none;
-            font-size: 1.25em;
+          color: $lightgrey;
+        }
+        #notifications {
+          cursor: pointer;
+          .icon-notification {
+            font-family: "fontello";
+            content: "\6e";
+            font-size: 1.75em;
+            color: $gold;
+            margin: -3px 3px 0 0;
+            @include flip;
           }
-          &.dropdown-toggle {
-            padding-left: 0;
-          }
-          .caret {
-            border-top: 4px solid $lightgrey;
-            padding-left: 0;
+          .notification-count {
+            top: -1px;
+            left: -4px;
+            text-align: center;
+            position:absolute;
+            p {
+              color: $darkgrey;
+              font-weight: 700;
+            }
           }
         }
         ul.dropdown-menu {
           padding: .5em 1.5em;
           background: $lightgrey;
           color: #A8A8A8;
-          li {
+          font-size: .75em;
+          width: 200px;
+          li.header {
             border-bottom: 1px solid #a8a8a8;
+            p {
+              font-weight: 700;
+            }
+          }
+          li {
+            border-bottom: 1px dotted #a8a8a8;
             margin: .5em 0;
             padding: .5em 0 .65em;
             &:last-child {
@@ -333,26 +346,19 @@
           }
         }
       }
-      #notifications {
-        a.icon-notification {
-          font-family: "fontello";
-          content: "\6e";
-          font-size: 1.5em;
-          color: $gold;
-          margin-top: .1em;
-          @include flip;
-        }
-        .notification-count {
-          top: 0;
-          width: 1.5em;
-          text-align: center;
-          position: absolute;
-          @include flip;
-          p {
-            margin-left: .25em;
-            color: $lightgrey;
-            font-weight: 700;
-            font-size: .5em;
+      .open {
+        /*margin-left: 2.25em;*/
+        position: absolute;
+        float: right;
+        /*@media (max-width: 480px) {*/
+          /*margin-left: 2.95em;*/
+        /*}*/
+        ul.dropdown-menu {
+          @media (max-width: 480px) {
+            right: -130px;
+            top: 24px;
+            margin: 0 auto;
+            width: 200px;
           }
         }
       }
